# gff3_parser

./: README.md  setup.cfg
gff3_parser/: parser.py
src/: __init__.py
src/gff3_parser/: parser.py
src/gff3_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
