[metadata]
name = gff3_parser
version = 0.0.1
author = McClain Thiel
author_email = McClain Thiel
description = A package for parsing gff3 (general feature format) files into pandas  dataframes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McClain-Thiel/gff3_parser
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src